--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="loginRegistro">Já possui uma conta? <b>Logue-se!</b></string>
     <string name="registrar">Registrar</string>
     <string name="numQuadrinho"><b>#00</b></string>
+    <string name="logout">Logout</string>
 </resources>
